--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS -->  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <title>{% block title %} {%endblock%}</title>
@@ -31,7 +31,7 @@
                       <a class="nav-link" href="{{ url_for('sentiment') }}">Sentiment Analysis</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('index') }}">Text Generation</a>
+                    <a class="nav-link" href="{{ url_for('text_generation') }}">Text Generation</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('task') }}">Task</a>
